--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,14 +13,61 @@
   <body>
   <% if flash[:notice] %>
   <div class="notification is-info">
-  <p class="notice"><%= notice %></p>
+   <p class="notice"><%= notice %></p>
   </div>
   <% end %>
+
   <% if flash[:alert] %>
   <div class="notification is-alert">
        <p class="alert"><%= alert %></p>
        </div>
        <% end %>
+
+       <nav class="navbar is-warning">
+      <div class="navbar-brand">
+       <%= link_to root_path, class: "navbar-item" do %>
+         <h1 class="title is-4" style="font-family: cursive;">business-programmer</h1>
+        <% end %>
+        <div class="navbar-burger burger" data-target="navbarExampleTransparentExample">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+
+ <% if user_signed_in? %>
+  <div id="navbarExampleTransparentExample" class="navbar-menu">
+    <div class="navbar-end">
+    <div class="navbar-item">
+     <div class="field is-grouped">
+
+        <p class="control">
+        <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "button is-warning is-light" %>
+        </p>
+             </div>
+            </div>
+          </div>
+         </div>
+        <% else %>
+      <div id="navbarExampleTransparentExample" class="navbar-menu">
+       <div class="navbar-end">
+        <div class="navbar-item">
+         <div class="field is-grouped">
+        <p class="control">
+        <%= link_to "ログイン", new_user_session_path, class: "button is-warning is-light" %>
+        </p>
+        <p class="control">
+        <%= link_to "新規登録", new_user_registration_path, class: "button is-warning is-light" %>
+        </p>
+         </div>
+          </div>
+           </div>
+            </div>
+        <% end %>
+
+
+        </nav>
+
 
     <%= yield %>
   </body>
