--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,10 +37,14 @@
 
  <% if user_signed_in? %>
   <div id="navbarExampleTransparentExample" class="navbar-menu">
+    <div class="navbar-item">
+    </div>
     <div class="navbar-end">
     <div class="navbar-item">
      <div class="field is-grouped">
-
+     <p class="control">
+    <%= link_to "プログラマー一覧", users_path, class: " button is-warning is-light"%>
+    </p>
         <p class="control">
         <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "button is-warning is-light" %>
         </p>
@@ -53,6 +57,9 @@
        <div class="navbar-end">
         <div class="navbar-item">
          <div class="field is-grouped">
+         <p class="control">
+         <%= link_to "プログラマー一覧", users_path, class: " button is-warning is-light"%>
+         </p>
         <p class="control">
         <%= link_to "ログイン", new_user_session_path, class: "button is-warning is-light" %>
         </p>
