--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,11 @@
  <% if user_signed_in? %>
   <div id="navbarExampleTransparentExample" class="navbar-menu">
     <div class="navbar-item">
+     <%= link_to "プログラマー回答一覧",programmers_path, class: "navbar-item button is-warning is-light" %>
+    </div>
+    
+    <div class="navbar-item">
+    <%= link_to "新規投稿", new_programmer_path, class: "navbar-item button is-warning is-light" %>
     </div>
     <div class="navbar-end">
     <div class="navbar-item">
@@ -45,6 +50,9 @@
      <p class="control">
     <%= link_to "プログラマー一覧", users_path, class: " button is-warning is-light"%>
     </p>
+   <p class="control">
+    <%= link_to "マイページ", user_path(current_user), class: "button is-warning is-light" %>
+    </p>   
         <p class="control">
         <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "button is-warning is-light" %>
         </p>
@@ -54,7 +62,15 @@
          </div>
         <% else %>
       <div id="navbarExampleTransparentExample" class="navbar-menu">
-       <div class="navbar-end">
+       <div class="navbar-item">
+       <%= link_to "回答一覧", programmers_path, class: "navbar-item button is-warning is-light" %>
+       </div>
+
+        <div class="navbar-item">
+        <%= link_to "プログラマー一覧", users_path, class: "navbar-item button is-warning is-light" %>
+        </div>
+
+        <div class="navbar-end">
         <div class="navbar-item">
          <div class="field is-grouped">
          <p class="control">
