--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,3 +46,59 @@
     </div>
   </div>
 </section>
+
+<section class="section">
+  <div class="container">
+    <div class="columns is-multiline">
+      <% @user.programmers.each do |programmer| %>
+       <div class="column is-4">
+          <div class="card">
+            <div class="card-image">
+              <figure class="image is-4by3">
+              <%= link_to programmer_path(programmer) do %>
+ <%= attachment_image_tag programmer, :image, fallback: "furima-header01.png" %>
+ <% end %>
+  </figure>
+   </div>
+    <div class="card-content">
+     <div class="media">
+      <div class="media-content">
+      <%= link_to programmer_path(programmer), class: "panel-block" do %>
+      <span class="panel-icon">
+       <i class="fas fa-book" aria-hidden="true"></i>
+        </span>
+        回答を見る
+        <% end %>
+         <% if @user.id == current_user.id %>
+         <%= link_to edit_programmer_path(programmer), class: "panel-block" do %>
+         <span class="panel-icon">
+          <i class="fas fa-edit"></i>
+           </span>
+           回答を編集する
+           <% end %>
+            <%= link_to programmer_path(programmer), method: :delete, data: {confirm: "削除しますか？"}, class: "panel-block" do %>
+            <span class="panel-icon">
+             <i class="fas fa-trash"></i>
+              </span>
+              削除する
+              <% end %>
+              <% end %>
+               </div>
+              </div>
+              <div class="content">
+              <time><%= programmer.updated_at.strftime("%Y-%m-%d %H:%M") %></time>更新
+               </div>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</section>
+
+              
+
+
+
+
+
