--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
        <nav class="navbar is-warning">
       <div class="navbar-brand">
        <%= link_to root_path, class: "navbar-item" do %>
-         <h1 class="title is-4" style="font-family: cursive;">business-programmer</h1>
+         <h1 class="title is-4" style="font-family: Osaka;">business-programmer</h1>
         <% end %>
         <div class="navbar-burger burger" data-target="navbarExampleTransparentExample">
           <span></span>
@@ -38,7 +38,7 @@
  <% if user_signed_in? %>
   <div id="navbarExampleTransparentExample" class="navbar-menu">
     <div class="navbar-item">
-     <%= link_to "プログラマー回答一覧",programmers_path, class: "navbar-item button is-warning is-light" %>
+     <%= link_to "回答一覧",programmers_path, class: "navbar-item button is-warning is-light" %>
     </div>
     
     <div class="navbar-item">
