--- a/app/views/programmers/new.html.erb
+++ b/app/views/programmers/new.html.erb
@@ -8,12 +8,23 @@
   </div>
 </section>
 
+<% if @programmer.errors.any? %>
+<div class="notification is-danger">
+    <h2><%= pluralize(@programmer.errors.count, "error") %> prohibited this object from being saved: not successfully</h2>
+    <ul>
+      <% @programmer.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <section class="section">
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-6">
 <%= form_for @programmer do |f| %>
-<%= f.label :title, "プログラーマー名", class: "label" %>
+<%= f.label :title, "プログラマー名", class: "label" %>
 <%= f.text_field :title, class: "input" %>
 
 <%= f.label :body, "詳細", class: "label" %>
