--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
        </div>
        <% end %>
 
-       <nav class="navbar is-warning">
+       <nav class="navbar is-success">
       <div class="navbar-brand">
        <%= link_to root_path, class: "navbar-item" do %>
          <h1 class="title is-4" style="font-family: Osaka;">business-programmer</h1>
