--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
        <nav class="navbar is-success">
       <div class="navbar-brand">
        <%= link_to root_path, class: "navbar-item" do %>
-         <h1 class="title is-4" style="font-family: Osaka;">business-programmer</h1>
+         <h1 class="title is-4" style="font-family: Osaka;">BG Programmer</h1>
         <% end %>
         <div class="navbar-burger burger" data-target="navbarExampleTransparentExample">
           <span></span>
