--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,7 +74,7 @@
         <div class="navbar-item">
          <div class="field is-grouped">
          <p class="control">
-         <%= link_to "プログラマー一覧", users_path, class: " button is-warning is-light"%>
+         <%= link_to "ビジネスプログラマー一覧", users_path, class: " button is-warning is-light"%>
          </p>
         <p class="control">
         <%= link_to "ログイン", new_user_session_path, class: "button is-warning is-light" %>
